--- a/project/src/samsung/res/values/strings.xml
+++ b/project/src/samsung/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="samsung_best_price_guarantee">Samsung Price Guarantee</string>
 
     <string name="samsung_deal">Samsung deal</string>
+
+    <!-- Airport code and name (code - name) -->
+    <string name="airport_code_name_TEMPLATE">{code} - {name}</string>
 </resources>
