--- a/project/src/main/res/values-en-rGB/strings.xml
+++ b/project/src/main/res/values-en-rGB/strings.xml
@@ -3578,5 +3578,7 @@
     <string name="child_age_label">Select each child\&apos;s age</string>
 
     <string name="lob_not_supported_error_message">Sorry, but {lob} booking is not yet available in your location.</string>
+    <string name="acct_Create_an_Expedia_account">Create an Expedia account</string>
+    <string name="acct_Welcome_to_Expedia">Welcome to Expedia</string>
 
 </resources>
