--- a/project/src/main/res/values-es-rES/strings.xml
+++ b/project/src/main/res/values-es-rES/strings.xml
@@ -3579,5 +3579,7 @@
     <string name="child_age_label">Selecciona la edad de cada niño</string>
 
     <string name="lob_not_supported_error_message">La reserva de {lob} no se encuentra disponible todavía en tu región.</string>
+    <string name="acct_Create_an_Expedia_account">Crear una cuenta de Expedia</string>
+    <string name="acct_Welcome_to_Expedia">¡Bienvenido a Expedia!</string>
 
 </resources>
