--- a/project/src/main/res/values-es/strings.xml
+++ b/project/src/main/res/values-es/strings.xml
@@ -3578,5 +3578,7 @@
     <string name="child_age_label">Selecciona la edad de cada niño</string>
 
     <string name="lob_not_supported_error_message">Lo sentimos, pero todavía no es posible reservar {lob} en tu ubicación.</string>
+    <string name="acct_Create_an_Expedia_account">Crear una cuenta de Expedia</string>
+    <string name="acct_Welcome_to_Expedia">Te damos la bienvenida a Expedia</string>
 
 </resources>
