--- a/project/src/main/res/values-fr-rCA/strings.xml
+++ b/project/src/main/res/values-fr-rCA/strings.xml
@@ -3578,5 +3578,7 @@
     <string name="child_age_label">Sélectionnez l\&apos;âge de chaque enfant</string>
 
     <string name="lob_not_supported_error_message">Désolé, la réservation de {lob} depuis votre appareil mobile n\&apos;est pas encore disponible dans votre région.</string>
+    <string name="acct_Create_an_Expedia_account">Créer un compte Expedia</string>
+    <string name="acct_Welcome_to_Expedia">Bienvenue sur Expedia</string>
 
 </resources>
