--- a/project/src/main/res/values-it/strings.xml
+++ b/project/src/main/res/values-it/strings.xml
@@ -3578,5 +3578,7 @@
     <string name="child_age_label">Seleziona l\&apos;età di ciascun bambino</string>
 
     <string name="lob_not_supported_error_message">Siamo spiacenti, la prenotazione di {lob} non è al momento disponibile nella località in cui ti trovi.</string>
+    <string name="acct_Create_an_Expedia_account">Crea un account Expedia</string>
+    <string name="acct_Welcome_to_Expedia">Benvenuto su Expedia</string>
 
 </resources>
