--- a/project/src/main/res/values-ja/strings.xml
+++ b/project/src/main/res/values-ja/strings.xml
@@ -3578,5 +3578,7 @@
     <string name="child_age_label">お子様の年齢を選択する</string>
 
     <string name="lob_not_supported_error_message">{lob}の予約は、お客様のロケーションではまだご利用いただけません。</string>
+    <string name="acct_Create_an_Expedia_account">エクスペディアのアカウントを作成する</string>
+    <string name="acct_Welcome_to_Expedia">エクスペディアにようこそ</string>
 
 </resources>
