--- a/project/src/main/res/values-ko/strings.xml
+++ b/project/src/main/res/values-ko/strings.xml
@@ -3578,5 +3578,7 @@
     <string name="child_age_label">각 아동의 나이 선택</string>
 
     <string name="lob_not_supported_error_message">죄송합니다. 고객님의 위치에서는 아직 {lob} 예약을 이용하실 수 없습니다.</string>
+    <string name="acct_Create_an_Expedia_account">익스피디아에 회원가입</string>
+    <string name="acct_Welcome_to_Expedia">익스피디아에 오신 걸 환영합니다!</string>
 
 </resources>
