--- a/project/src/main/res/values-nb/strings.xml
+++ b/project/src/main/res/values-nb/strings.xml
@@ -3578,5 +3578,7 @@
     <string name="child_age_label">Velg hvert barns alder</string>
 
     <string name="lob_not_supported_error_message">Beklager, {lob}-bestillinger på mobil er ikke tilgjengelig der du befinner deg ennå.</string>
+    <string name="acct_Create_an_Expedia_account">Opprett en Expedia-konto</string>
+    <string name="acct_Welcome_to_Expedia">Velkommen til Expedia</string>
 
 </resources>
