--- a/project/src/main/res/values-pt-rBR/strings.xml
+++ b/project/src/main/res/values-pt-rBR/strings.xml
@@ -3578,5 +3578,7 @@
     <string name="child_age_label">Selecione a idade de cada criança</string>
 
     <string name="lob_not_supported_error_message">Reserva de {lob} ainda não está disponível para seu local.</string>
+    <string name="acct_Create_an_Expedia_account">Criar uma conta da Expedia</string>
+    <string name="acct_Welcome_to_Expedia">Bem-vindo à Expedia</string>
 
 </resources>
