--- a/project/src/main/res/values-zh-rTW/strings.xml
+++ b/project/src/main/res/values-zh-rTW/strings.xml
@@ -3578,5 +3578,7 @@
     <string name="child_age_label">請選擇每位兒童的年齡</string>
 
     <string name="lob_not_supported_error_message">很抱歉，您的所在地點尚未提供{lob}預訂。</string>
+    <string name="acct_Create_an_Expedia_account">註冊 Expedia 帳戶</string>
+    <string name="acct_Welcome_to_Expedia">歡迎使用 Expedia</string>
 
 </resources>
