--- a/project/src/main/res/values-zh/strings.xml
+++ b/project/src/main/res/values-zh/strings.xml
@@ -3578,5 +3578,7 @@
     <string name="child_age_label">选择每个儿童的年龄</string>
 
     <string name="lob_not_supported_error_message">抱歉，您所在的位置尚未提供{lob}预订服务。</string>
+    <string name="acct_Create_an_Expedia_account">创建 Expedia 帐户</string>
+    <string name="acct_Welcome_to_Expedia">欢迎来到 Expedia</string>
 
 </resources>
